# kuzu-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  p
examples/: basic.rs  derive.rs  ex1.rs  transaction.rs
kuzu-macros/: Cargo.toml
kuzu-macros/src/: from_kuzurow.rs  from_kuzustruct.rs  lib.rs
libkuzudb-sys/: Cargo.toml  build.rs  simplified_cmake.txt
libkuzudb-sys/src/: lib.rs
src/: connection.rs  database.rs  error.rs  ffi.rs  helper.rs  lib.rs  opaque_types.rs  prepared_statement.rs  ptrc.rs  query_result.rs  transaction.rs
src/types/: decode.rs  encode.rs  logical_type.rs  mod.rs  row.rs  value.rs
src/types/custom_types/: mod.rs  node.rs  rel.rs
