[package]
name = "kuzu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
libkuzudb-sys = { path = "libkuzudb-sys" }
kuzu-macros = { path = "kuzu-macros" }

[workspace]
members = ["libkuzudb-sys", "kuzu-macros"]

[[examples]]
name = "basic"

[[examples]]
name = "transaction"

[[examples]]
name = "derive"